--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,3 +59,4 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: dist/*Setup*.exe
+          generate_release_notes: true
